@@ -22,6 +22,18 @@
 	<string name="ck_feedback_password_title">Password feedback</string>
 	<string name="ck_feedback_password_summary">Visual feedback for passwords</string>
 
+    <string name="pg_margins_title">Margins</string>
+    <string name="pg_margins_summary">Margin sizes</string>
+
+    <string name="ck_margin_left_title">Left</string>
+    <string name="ck_margin_left_summary">Left margin in mm-s</string>
+
+    <string name="ck_margin_right_title">Right</string>
+    <string name="ck_margin_right_summary">Right margin in mm-s</string>
+
+    <string name="ck_margin_bottom_title">Bottom</string>
+    <string name="ck_margin_bottom_summary">Bottom margin in mm-s</string>
+
 	<string name="ck_layout_title">Layouts</string>
 	<string name="ck_layout_summary">Layouts for various alphabets</string>
 
@@ -71,7 +83,7 @@
 	<string name="pg_about_summary">Miscellaneous information</string>
 
 	<string name="ck_version_title">Version</string>
-	<string name="ck_version_summary">v1.2</string>
+	<string name="ck_version_summary">v1.2.1beta</string>
 
 	<string name="ck_copyright_title">Copyright</string>
 	<string name="ck_copyright_summary">2011 Gabor Simon. All rights reserved, New BSD License applies.</string>
